<resources>
    <string name="hello">Hello World, MoleInTheSystemActivity!</string>
    <string name="app_name">Caesura</string>
    <string name="main_service_enabled_cb">Enable Service</string>
    <string name="main_service_require_password_cb">Require Password to Log In Remotely</string>
    <string name="main_service_block_mole_texts_cb">Block Mole Control Texts from Reaching Inbox</string>
    <string name="main_service_set_password_btn">Set Password</string>
    <string name="main_login_dialog_message">Enter your password:</string>
    <string name="main_login_dialog_btn">Login</string>
    <string name="main_set_pswd_dialog_btn">Set Password</string>
    <string name="main_set_pswd_dialog_message">Enter new password:</string>
    <string name="main_configure_panic_mode_btn">Configure Panic Mode</string>
    <string name="main_configure_panic_mode_message">Enter your information and preferences for panic mode: \n\n The top box is the Large Text that will appear on the screen when you send the panic command and the Bottom is the caption.</string>
    <string name="main_access_log_message">This is the log of all times in which someone accessed or tried to access mole service.</string>
    <string name="main_review_access_log_btn">Review Access Log</string>
    <string name="main_review_access_log_dialog_btn">Close</string>
    <string name="main_review_access_log_dialog_clear_btn">Clear Log</string>
    <string name="main_menu_about">About Caesura</string>
    <string name="main_welcome_tv">Welcome to Caesura Remote Administration</string>
    <string name="service_cmd_login">!login</string>
    <string name="service_cmd_token">~</string>
    <string name="service_msg_error_already_logged_in">Caesura Service is Currently Under Someone Else\'s Control</string>
    <string name="service_msg_attempted_login">  is trying to access Caesura.</string>
    <string name="service_msg_error_access_denied_already_logged_in">Access denied. User Already Logged In.</string>
    <string name="service_msg_enter_password">Caesura Service: Enter your password or send exit to quit</string>
    <string name="service_msg_activated">Caesura Service Activated. Type exit to Log out.</string>
    <string name="service_msg_acess_granted_std">Access Granted. Standard Login.</string>
    <string name="service_msg_access_granted_pswd">Access Granted. Password Login Success.</string>
    <string name="service_msg_error_incorrect_pswd">Incorrect Password. Try again or send exit to quit.</string>
    <string name="service_msg_error_access_denied_incorrect_pswd">Access Denied. Incorrect Password. Send exit to quit</string>
    <string name="service_msg_deactivated">Goodbye!</string>
    <string name="service_cmd_exit">exit</string>
    <string name="service_msg_error_already_running">Caesura is already logged in on this phone. Type exit to log out.</string>
    <string name="service_cmd_toast">toast</string>
    <string name="service_msg_toast_displayed">Displayed.</string>
    <string name="service_cmd_send_sms">sendsms</string>
    <string name="service_msg_sending_sms">Sending text message \&quot;%m...\&quot; to %c</string>
    <string name="service_msg_error_sendsms_missing_arg">Sendsms. sendsms [phonenumber] [message text]</string>
    <string name="service_cmd_torch">torch</string>
    <string name="service_msg_error_torch_init_error">Error initializing Torch.</string>
    <string name="service_msg_error_torch_unsupported">Error Lighting Torch. Insure that device has LED flash and supports Torch mode.</string>
    <string name="service_msg_torch_lit">Torch Lit.</string>
    <string name="service_msg_torch_off">Torch Extinguished.</string>
    <string name="service_cmd_panic">panic</string>
    <string name="service_msg_panic_init">Panic Initialized.</string>
    <string name="service_msg_panic_off">Panic Turned Off.</string>
    <string name="service_cmd_help">help</string>
    <string name="service_msg_help_msg">Type help [commandname] for help with a specific command.</string>
    <string name="service_msg_error_no_help_msg">No help is available for this command.</string>
    <string name="service_cmd_status">status</string>
    <string name="service_msg_help_status">Status. Simple information about the current state of the device.</string>
    <string name="service_msg_status" formatted="false">Battery %B%, Unread Messages %U, GPS %G, WiFi %W.</string>
    <string name="service_cmd_password">password</string>
    <string name="service_msg_password_saved">New Password Saved.</string>
    <string name="service_msg_error_password_help">Password [new-password]</string>
    <string name="main_sms_intercept_message">Caesura supports a system known as SMS Interception. This system can be useful for allowing parents to screen their children\'s text messages, and even read them.</string>
    <string name="service_cmd_unlock">unlock</string>
    <string name="service_msg_unlock">Unlocking Device.</string>
    <string name="service_msg_help_unlock">This command unlocks the keys on a password protected device. The password will be disabled while Caesura is enabled.</string>
    <string name="main_sms_blacklist_btn">Sms Filter</string>
    <string name="smsfilter_blocked_add_msg">Enter a number to be blocked or forwarded from this phone.</string>
    <string name="smsfilter_welcome_tv">Welcome to Caesura\'s SmsFilter Labratory. In this window, you can either block texts from certain numbers or forward texts.\n\nBefore you can forward texts, you must configure this option by pressing the Options Button.</string>
    <string name="smsfilter_blocked_texts_tv">Blocked Phone Numbers:</string>
    <string name="smsfilter_blocked_add">Add</string>
    <string name="smsfilter_blocked_remove">Remove</string>
    <string name="smsfilter_blocked_add_btn">Add New Number</string>
    <string name="smsfilter_blocked_add_error">Error. Either this number is already blocked or it is less than 10 digits long.</string>
    <string name="smsfilter_blocked_success">Changes applied successfully.</string>
    <string name="smsfilter_blocked_list_hint">Select a number</string>
    <string name="smsfilter_forwarded_tv">Forwarded Numbers:</string>
    <string name="smsfilter_forwarded_options_btn">Options</string>
    <string name="smsfilter_forwarded_options_msg">Please enter a phone number for SMS messages to be forwarded to:</string>
    <string name="smsfilter_fowarded_options_error">Error. This is not a valid mobile phone number.</string>
    <string name="smsfilter_forwarded_options_ok_btn">Confirm</string>
    <string name="service_cmd_block">block</string>
    <string name="service_msg_error_block">Incorrect Argument: block [10 digit phone number]</string>
    <string name="service_msg_blocked">Number blocked.</string>
    <string name="service_cmd_unblock">unblock</string>
    <string name="service_msg_error_unblock">The specified number is not blocked.</string>
    <string name="service_msg_unblocked">Number Unblocked.</string>
    <string name="service_cmd_blocked">blocked</string>
    <string name="service_msg_error_blocked">No numbers are blocked.</string>
    <string name="service_cmd_forward">forward</string>
    <string name="service_msg_error_forward">Incorrect Argument: forward [10 digit phone number]</string>
    <string name="service_msg_forward">Number set to forward.</string>
    <string name="service_cmd_unforward">unforward</string>
    <string name="service_msg_error_unforward">This number is not being forwarded.</string>
    <string name="service_msg_unforward">Number UnForwarded.</string>
    <string name="service_cmd_forwarded">forwarded</string>
    <string name="service_msg_error_forwarded">No numbers are being forwarded.</string>
    <string name="service_cmd_forwardto">forwardto</string>
    <string name="service_msg_error_forwardto">Incorrect Argument: forwardto [10 digit mobile phone number]</string>
    <string name="service_msg_forwardto">New ForwardTo Address Saved.</string>
    <string name="main_about_dlg_message" formatted="false">Caesura Remote Administration\nBy: Christian Gunderman\nv%V Build %B\n\nTake control of your phone...and possibly the world :P\n\nDeveloped by Gundersoft in Hillsboro\n\ngundermanc@gmail.com\nwww.gundersoft.com</string>
    <string name="main_open_console_btn">Login to Another Phone</string>
    <string name="smsfilter_window_title">SmsFilter Labratory</string>
    <string name="console_window_title">Command Console</string>
    <string name="console_welcome_tv">Welcome to Caesura Command Console. Commands may be selected from the dropdown list at the bottom of the screen.</string>
    <string name="console_connect_dialog_message">Enter the telephone number of the phone you wish to connect to:</string>
    <string name="console_connect_dialog_btn">Connect</string>
    <string name="console_send_btn">Send</string>
    <string name="console_connect_dialog_err">The value given is not a valid 10 digit phone number.</string>
    <string name="console_connect_success">Attempting to Connect...</string>
    <string name="service_msg_logging_out">Logging out of Caesura. CLEAR SMS OUTBOX TO PROTECT PASSWORD!"</string>
    <string name="console_exit_msg">Logging out of Caesura</string>
    <string name="location_welcome_tv">Welcome to the Location Features Settings</string>
    <string name="location_window_title">Location Features</string>
    <string name="settings_window_title">Caesura Settings</string>
    <string name="main_exit_btn">Exit and Lock</string>
    <string name="console_msg_err_blank">Can not send blank command\nPlease select a command and try again.</string>
    <string name="main_location_btn">Location Settings</string>
    <string name="location_provider_tv">"Location Provider: "</string>
    <string-array name="location_providers_spnr">
        <item >GPS Only (Precise)</item>
        <item >Wifi (Coarse)</item>
        <item >Both (GPS when available)</item>
    </string-array>
    <string name="service_cmd_radius">radius</string>
    <string name="service_cmd_speedlimit">speedlimit</string>
    <string name="panicbanner_stop_btn">Stop this Racket!</string>
    <string name="service_cmd_contacts">contacts</string>
    <string name="service_msg_more">...more</string>
    <string name="service_cmd_more">more</string>
    <string name="service_cmd_contacts_search">search</string>
    <string name="service_cmd_contacts_getphone">getphone</string>
    <string name="service_msg_err_contacts">Missing Argument: contacts [command] [name]. The following are commands: search, getphone, setphone.</string>
    <string name="service_cmd_contacts_setphone">setphone</string>
    <string name="console_contacts_btn">Look up phone number</string>
    <string name="console_msg_phone_err">Error, selected user has no associated phone number.</string>
    <string name="main_enable_notifications_cb">Notify Me when a Phone Control Message is Received</string>
    <string name="console_notification_ticker">New Message From Remote Phone</string>
    <string name="service_cmd_kill_icon">killicon</string>
    <string name="main_troll_panel_btn">ConTROLL Panel</string>
    <string name="main_connected_tv_disconnected">Disconnected</string>
    <string name="main_manual_button">Instruction Manual</string>
    <string name="main_settings_tv">Welcome to Caesura Settings. Press one of the buttons or checkboxes below to make a selection.</string>
    <string name="app_main_tutorials_btn">Online HELP and HOW-TOs</string>
</resources>